--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "egg-geetest",
-  "version": "1.0.0-beta.0",
+  "version": "1.0.0",
   "description": "egg geetest plugin",
   "eggPlugin": {
     "name": "eggGeetest"
